# multi-turn-evals-any-llm

./: .gitignore  Commerce_LLM_100_Percent_Coverage_Explanation_v2.docx  LICENSE  README.md  UserGuide.md  a2a-implementation-plan.md  generate_figma_pptx.py  generate_pptx.py  multi_turn_eval_framework_build_prompts_dspy.md  multi_turn_llm_evals_requirements.md  package-lock.json  ~$mmerce_LLM_100_Percent_Coverage_Explanation_v2.docx
backend/: README.md  app.py  artifacts.py  cli.py  context_builder.py  conversation_generator.py  convgen_v2.py  coverage_builder.py  coverage_builder_v2.py  coverage_config.py  coverage_engine.py  dataset_repo.py  export_prompts.py  orchestrator.py  pyproject.toml  rag.py  report_diff.py  reporter.py  requirements.txt  risk_sampler.py  schemas.py  state_extractor.py  system_prompt.py  turn_runner.py
backend/embeddings/: ollama_embed.py
backend/providers/: gemini.py  ollama.py  openai.py  registry.py  types.py
backend/templates/: report.html.j2
backend/tests/: test_adherence_metric.py  test_aggregation.py  test_api_feedback.py  test_api_start_run.py  test_artifact_persistence.py  test_cancellation.py  test_config_loader.py  test_consistency_metric.py  test_constraints.py  test_context_builder.py  test_conversation_thresholds.py  test_correctness_metric.py  test_csv_export.py  test_dataset_format.py  test_dataset_repo.py  test_embeddings.py  test_export_prompts.py  test_filtering.py  test_hallucination_metric.py  test_headless_engine.py  test_improvements.py  test_init_workspace.py  test_install.py  test_llm_schema.py  test_loader.py  (+36 more)
(+173 files in other folders)
